--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-data-grid": "8.16.0",
     "@tailwindcss/vite": "4.1.16",
     "axios": "1.13.2",
+    "dotenv": "17.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "7.9.5",
