--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "11.14.1",
     "@mui/material": "7.3.4",
     "@mui/x-data-grid": "8.16.0",
+    "@mui/x-date-pickers": "8.19.0",
     "@tailwindcss/vite": "4.1.16",
     "axios": "1.13.2",
+    "dayjs": "1.11.19",
     "dotenv": "17.2.3",
     "lucide-react": "0.554.0",
     "react": "19.1.1",
