--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
     "@mui/material": "7.3.4",
+    "@mui/x-charts": "8.19.0",
     "@mui/x-data-grid": "8.16.0",
     "@mui/x-date-pickers": "8.19.0",
     "@tailwindcss/vite": "4.1.16",
