--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
-    "@mui/material": "7.3.4",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "@mui/x-charts": "8.19.0",
     "@mui/x-data-grid": "8.16.0",
     "@mui/x-date-pickers": "8.19.0",
@@ -24,6 +25,7 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-router-dom": "7.9.5",
+    "recharts": "^3.5.1",
     "xlsx": "0.18.5"
   },
   "devDependencies": {
