--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@mui/x-date-pickers": "8.19.0",
     "@tailwindcss/vite": "4.1.16",
     "axios": "1.13.2",
+    "chart.js": "4.5.1",
+    "chartjs-plugin-datalabels": "2.2.0",
     "dayjs": "1.11.19",
     "dotenv": "17.2.3",
     "lucide-react": "0.554.0",
     "react": "19.1.1",
+    "react-chartjs-2": "5.3.1",
     "react-dom": "19.1.1",
     "react-router-dom": "7.9.5",
     "xlsx": "0.18.5"
